added changes for about us page

--- a/app/style/global.css
+++ b/app/style/global.css
@@ -1,3 +1,4 @@
+/* places p:after changed */
 @font-face {   
 	font-family: "ElegantIcons";   
 	font-style: normal;  
@@ -598,7 +599,8 @@ header .social-icon ul li:hover a{
 	font-family: 'PT Serif', serif;	
 	position:relative;
 }
-.places p:after {
+
+/* .places p:after {
 	border-top: 5px solid #FCB714;
 	position: absolute;
 	left: 0;
@@ -607,7 +609,8 @@ header .social-icon ul li:hover a{
 	width: 70px;
 	margin:0 auto;
 	right:0;
-}
+} */
+
 .places hr {
     width:170px;
     border-top: 1px solid #ccc;
@@ -1722,79 +1725,79 @@ footer .powered .social-icon ul li a:hover{
     font-size:11px;
 }
 .wifi{
-	background:url('../public/images/wifi.png') no-repeat;
+	background:url('../../public/images/wifi.png') no-repeat;
 	display:block;
 	height:19px;
 	width:28px;
 	margin:0 auto;
 }
 .pool{
-	background:url('../public/images/pool.png') no-repeat;
+	background:url('../../public/images/pool.png') no-repeat;
 	display:block;
 	height:24px;
 	width:30px;
 	margin:0 auto;
 }
 .gym{
-	background:url('../public/images/gym.png') no-repeat;
+	background:url('../../public/images/gym.png') no-repeat;
 	display:block;
 	height:11px;
 	width:30px;
 	margin:0 auto;
 }
 .rest{
-	background:url('../public/images/rest.png') no-repeat;
+	background:url('../../public/images/rest.png') no-repeat;
 	display:block;
 	height:23px;
 	width:17px;
 	margin:0 auto;
 }
 .golf{
-	background:url('../public/images/golf.png') no-repeat;
+	background:url('../../public/images/golf.png') no-repeat;
 	display:block;
 	height:25px;
 	width:13px;
 	margin:0 auto;
 }
 .tourr{
-	background:url('../public/images/tour.png') no-repeat;
+	background:url('../../public/images/tour.png') no-repeat;
 	display:block;
 	height:33px;
 	width:40px;
 	margin:0 auto;
 }
 .flight{
-	background:url('../public/images/flight.png') no-repeat;
+	background:url('../../public/images/flight.png') no-repeat;
 	display:block;
 	height:33px;
 	width:30px;
 	margin:0 auto;
 }
 .pacake{
-	background:url('../public/images/pacake.png') no-repeat;
+	background:url('../../public/images/pacake.png') no-repeat;
 	display:block;
 	height:33px;
 	width:33px;
 	margin:0 auto;
 }
 .hotel{
-	background:url('../public/images/hotel.png') no-repeat;
+	background:url('../../public/images/hotel.png') no-repeat;
 	display:block;
 	height:33px;
 	width:20px;
 	margin:0 auto;
 }
 li.active .tourr,li:hover .tourr{
-	background:url('../public/images/icon1.png') no-repeat;
+	background:url('../../public/images/icon1.png') no-repeat;
 }
 li.active .flight,li:hover .flight{
-	background:url('../public/images/icon5.png') no-repeat;
+	background:url('../../public/images/icon5.png') no-repeat;
 }
 li.active .pacake,li:hover .pacake{
-	background:url('../public/images/icon3.png') no-repeat;
+	background:url('../../public/images/icon3.png') no-repeat;
 }
 li.active .hotel,li:hover .hotel{
-	background:url('../public/images/icon2.png') no-repeat;
+	background:url('../../public/images/icon2.png') no-repeat;
 }
 .header3 .booking{
 	background:#fcb714;
@@ -2057,124 +2060,124 @@ li.active .hotel,li:hover .hotel{
 	padding:8px 0;
 }
 .canada{
-	background:url("../public/images/country-icons/c1.png")no-repeat;
+	background:url("../../public/images/country-icons/c1.png")no-repeat;
 	margin:0 auto;
 	dispaly:block;
 	width:36px;
 	height:24px;
 }
 li.active .canada,li:hover .canada{
-	background:url("../public/images/country-icons/c1_w.png")no-repeat;
+	background:url("../../public/images/country-icons/c1_w.png")no-repeat;
 }
 .usa{
-	background:url("../public/images/country-icons/c2.png")no-repeat;
+	background:url("../../public/images/country-icons/c2.png")no-repeat;
 	margin:0 auto;
 	dispaly:block;
 	width:36px;
 	height:24px;
 }
 li.active .usa,li:hover .usa{
-	background:url("../public/images/country-icons/c2_w.png")no-repeat;
+	background:url("../../public/images/country-icons/c2_w.png")no-repeat;
 }
 .india{
-	background:url("../public/images/country-icons/c3.png")no-repeat;
+	background:url("../../public/images/country-icons/c3.png")no-repeat;
 	margin:0 auto;
 	dispaly:block;
 	width:36px;
 	height:24px;
 }
 li.active .india,li:hover .india{
-	background:url("../public/images/country-icons/c3_w.png")no-repeat;
+	background:url("../../public/images/country-icons/c3_w.png")no-repeat;
 }
 .spain{
-	background:url("../public/images/country-icons/c4.png")no-repeat;
+	background:url("../../public/images/country-icons/c4.png")no-repeat;
 	margin:0 auto;
 	dispaly:block;
 	width:36px;
 	height:24px;
 }
 li.active .spain,li:hover .spain{
-	background:url("../public/images/country-icons/c4_w.png")no-repeat;
+	background:url("../../public/images/country-icons/c4_w.png")no-repeat;
 }
 .england{
-	background:url("../public/images/country-icons/c5.png")no-repeat;
+	background:url("../../public/images/country-icons/c5.png")no-repeat;
 	margin:0 auto;
 	dispaly:block;
 	width:36px;
 	height:24px;
 }
 li.active .england,li:hover .england{
-	background:url("../public/images/country-icons/c5_w.png")no-repeat;
+	background:url("../../public/images/country-icons/c5_w.png")no-repeat;
 }
 .switzerland{
-	background:url("../public/images/country-icons/c6.png")no-repeat;
+	background:url("../../public/images/country-icons/c6.png")no-repeat;
 	margin:0 auto;
 	dispaly:block;
 	width:36px;
 	height:24px;
 }
 li.active .switzerland,li:hover .switzerland{
-	background:url("../public/images/country-icons/c6_w.png")no-repeat;
+	background:url("../../public/images/country-icons/c6_w.png")no-repeat;
 }
 .newzealand{
-	background:url("../public/images/country-icons/c7.png")no-repeat;
+	background:url("../../public/images/country-icons/c7.png")no-repeat;
 	margin:0 auto;
 	dispaly:block;
 	width:36px;
 	height:24px;
 }
 li.active .newzealand,li:hover .newzealand{
-	background:url("../public/images/country-icons/c7_w.png")no-repeat;
+	background:url("../../public/images/country-icons/c7_w.png")no-repeat;
 }
 .nepal{
-	background:url("../public/images/country-icons/c8.png")no-repeat;
+	background:url("../../public/images/country-icons/c8.png")no-repeat;
 	margin:0 auto;
 	dispaly:block;
 	width:36px;
 	height:24px;
 }
 li.active .nepal,li:hover .nepal{
-	background:url("../public/images/country-icons/c8_w.png")no-repeat;
+	background:url("../../public/images/country-icons/c8_w.png")no-repeat;
 }
 .malasya{
-	background:url("../public/images/country-icons/c9.png")no-repeat;
+	background:url("../../public/images/country-icons/c9.png")no-repeat;
 	margin:0 auto;
 	dispaly:block;
 	width:36px;
 	height:24px;
 }
 li.active .malasya,li:hover .malasya{
-	background:url("../public/images/country-icons/c9_w.png")no-repeat;
+	background:url("../../public/images/country-icons/c9_w.png")no-repeat;
 }
 .allgallery{
-	background:url("../public/images/gallery-icon/icon1.png") no-repeat;
+	background:url("../../public/images/gallery-icon/icon1.png") no-repeat;
 	margin:5px auto 0;
 	dispaly:block;
 	width:24px;
 	height:24px;
 }
 li.active .allgallery, li:hover .allgallery{
-	background:url("../public/images/gallery-icon/icon1-hover.png") no-repeat;
+	background:url("../../public/images/gallery-icon/icon1-hover.png") no-repeat;
 }
 .summer{
-	background:url("../public/images/gallery-icon/icon4.png") no-repeat;
+	background:url("../../public/images/gallery-icon/icon4.png") no-repeat;
 	margin:0 auto;
 	dispaly:block;
 	width:30px;
 	height:38px;
 }
 li.active .summer, li:hover .summer{
-	background:url("../public/images/gallery-icon/icon4-hover.png") no-repeat;
+	background:url("../../public/images/gallery-icon/icon4-hover.png") no-repeat;
 }
 .sport{
-	background:url("../public/images/gallery-icon/icon5.png")no-repeat;
+	background:url("../../public/images/gallery-icon/icon5.png")no-repeat;
 	margin:0 auto;
 	dispaly:block;
 	width:25px;
 	height:36px;
 }
 li.active .sport, li:hover .sport{
-	background:url("../public/images/gallery-icon/icon5-hover.png") no-repeat;
+	background:url("../../public/images/gallery-icon/icon5-hover.png") no-repeat;
 }
 .header3 .country .places  li > a{
 	padding:12px 0;
@@ -2601,7 +2604,7 @@ li.active .sport, li:hover .sport{
 	color:#fff;
 }
 .bread-crumb{
-	background:url("../public/images/image-top.jpg") no-repeat;
+	background:url("../../public/images/image-top.jpg") no-repeat;
 	height:110px;
 	padding-top:30px;
 	text-align:center;
@@ -2753,7 +2756,7 @@ li.active .sport, li:hover .sport{
 	height: 990px;
 }
 .leftside{
-	background-image: url("../public/images/bg-image.jpg");
+	background-image: url("../../public/images/bg-image.jpg");
 	height: 990px;
 	background-repeat: no-repeat;
 	display:block;
@@ -2973,7 +2976,7 @@ li.active .sport, li:hover .sport{
 	margin:17px 0 24px; 
 	font-family:"PT Serif",serif;
 }
-.about .bg{
+.about .bg {
 	position:relative;
 }
 .about .bg img{
@@ -2991,12 +2994,12 @@ li.active .sport, li:hover .sport{
 	color:#fff;
 }
 .about .matter{
-	text-align:center;
+	text-align:center !important;
 }
-.about .matter .imgs{
+.about .matter .imgs {
 	height:66px;
 }
-.about .matter img{
+.about .matter img {
 	margin:0 auto;
 }
 .about .matter h1{
@@ -3460,14 +3463,14 @@ li.active .sport, li:hover .sport{
 	padding:0;
 }
 .prettycheckbox > a {
-    background: rgba(0, 0, 0, 0) url("../public/images/uncheck.png") no-repeat scroll 0 0 !important;
+    background: rgba(0, 0, 0, 0) url("../../public/images/uncheck.png") no-repeat scroll 0 0 !important;
 	width:10px !important;
 	height:16px !important;
 	margin-right:5px !important;
 	top:0 !important;
 }
 .prettycheckbox > a.checked {
-    background: url("../public/images/check.png") no-repeat !important;
+    background: url("../../public/images/check.png") no-repeat !important;
 }
 .left-box .book .tab-content .form-group {
 	margin:0 0 30px;
